--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-popover",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A <Popover /> component for react-native",
   "main": "Popover.js",
   "author": "Jean Regisser <jean.regisser@gmail.com> (https://github.com/jeanregisser)",
@@ -21,7 +21,10 @@
     "url": "git@github.com:jeanregisser/react-native-popover.git"
   },
   "devDependencies": {
-    "react": "^15.0.2",
-    "react-native": "^0.26.2"
+    "react": "^16.2.0",
+    "react-native": "^0.54.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.1"
   }
 }
